force-app/main/default/objects/PWChrono_Bonus__c/PWChrono_Bonus__c.object-meta.xml
<CustomObject>
    <label>PWChrono Bonus</label>
    <nameField>
        <displayFormat>BON-{0000}</displayFormat>
        <label>Bonus ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PWChrono Bonuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>