force-app/main/default/objects/PWChrono_Bonus__c/fields/Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Appraisal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appraisal</label>
    <referenceTo>PWChrono_Appraisal__c</referenceTo>
    <relationshipLabel>Bonuses</relationshipLabel>
    <relationshipName>Bonuses</relationshipName>
    <type>Lookup</type>
</CustomField>