force-app/main/default/objects/PWChrono_Bonus__c/fields/Bonus_Date__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Date__c</fullName>
    <label>Bonus Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>