force-app/main/default/objects/PWChrono_Bonus__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Bonuses</relationshipLabel>
    <relationshipName>Bonuses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>